[package]
name = "screen_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    screenshots = "0.8.10"
    image = "0.24"
    xcap = "0.0.4"
    windows-capture = "1.0.61"
    scrap="0.5.0"
    enigo = "0.1.3"
    device_query = "2.0.0"
